console: Fix layout bug of expanded console
Previously the size of the card body was controlled via explicit pixel
computations.

Without doing this, the <canvas> element created by NoVNC would
determine the height of the body and would cause the card itself to
start scrolling.

Now we just add "overflow: auto" to the body, which magically makes it
so that the size of the body is not influenced by its content, and
only the <div> immediately around the <canvas> gets scrollbars, as
intended by NoVNC.

This makes the computations unnecessary and we don't need to know (or
guess) how high the card header is.

Fix by Freya Gustavsson <freya@venefilyn.se>, thanks!

--- a/src/components/vm/consoles/consoles.css
+++ b/src/components/vm/consoles/consoles.css
@@ -55,9 +55,8 @@
     }
 
     .consoles-card .pf-v6-c-card__body {
-        /* HACK - better done with a Flex instead of a Card? */
-        max-block-size: calc(100% - 77px);  /* 100% - card header height */
         padding-inline-start: 0;
         padding-inline-end: 0;
+        overflow: auto;
     }
 }
